# ProgressiveTexture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Test/: CMakeLists.txt  hello_test.cpp  images.cpp  reader.cpp  templates.cpp  thread.cpp  utils.cpp
cmake/: version.cmake
src/Block/: Block.cpp  Block.h  CMakeLists.txt
src/Image/: CMakeLists.txt  IImageIO.h  Image.cpp  Image.h  ImageFactory.h
src/Image/Dummy/: DummyImageIO.h
src/Image/IO/: IImageIO.cpp  IImageIO.h
src/Image/IO/Default/: DefaultImageIO.cpp  DefaultImageIO.h
src/Image/IO/Dummy/: DummyImageIO.h
src/Image/Process/: IImageProcess.h
src/Image/Process/Default/: DefaultImageProcess.cpp  DefaultImageProcess.h
src/Image/Process/Flipper/: FlipperImageProcess.cpp  FlipperImageProcess.h
src/Image/Process/Resizer/: ResizerImageProcess.cpp  ResizerImageProcess.h
src/Image/Process/Splitter/: Block.cpp  Block.h  SplitterImageProcess.cpp  SplitterImageProcess.h
src/ImageIO/: IReader.cpp  IReader.h
src/ImageIO/Default/: DefaultImageIO.h  DefaultReader.cpp  DefaultReader.h
src/Plugins/: CMakeLists.txt
src/Plugins/Common/: ExportCommon.cpp  ExportLog.cpp  ExportPlatform.cpp
src/Plugins/Export/: ExportCommon.cpp  ExportLog.cpp  ExportPlatform.cpp  ExportTexture.cpp
src/Plugins/Unity/: Platform3d.h  PlatformBase.h  ProgressiveTexturePlugin.cpp
src/Plugins/Unity/RenderAPI/: RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_D3D12.h  RenderAPI_Metal.h  RenderAPI_Metal.mm  RenderAPI_OpenGLCoreES.cpp  RenderAPI_Vulkan.cpp
src/Plugins/Unity/gl3w/: ._readme.txt
src/Reader/: IReader.h
src/Reader/Default/: DefaultReader.cpp  DefaultReader.h
src/Texture/: CMakeLists.txt  Context.h  GraphicAPI.h  Texture.cpp  Texture.h
src/Utils/: CMakeLists.txt  Console.cpp  DynamicTemplate.h  ExportInterface.h  Factory.h  Log.cpp  Log.h  Random.h  Utils.h
src/Utils/Console/: Console.h
src/Utils/Delegate/: Callback.h  Delegate.h
src/Utils/Log/: ExportLog.h  Log.cpp  Log.h  Log.hpp
src/Utils/Pattern/: DynamicTemplate.h  Factory.h
src/Utils/Platform/: Platform3d.h  PlatformBase.h
src/Utils/Version/: version.h.in
src/Worker/: CMakeLists.txt  TaskWorker.h  TextureTask.h  TextureWorker.h  ThreadPool.h  ThreadWorker.h
src/Worker/Task/: ITaskWorker.cpp  ITaskWorker.h
src/Worker/Texture/: TextureTask.cpp  TextureTask.h
src/Worker/Thread/: ThreadWorker.h  ThreadWorker.hpp
src/_Misc/: template.txt
